homework three re: