@@ -1,17 +1,13 @@
 package lesson_three;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 
 public class Duplicates {
   public static void main(String[] args) {
-    String[] words = {
-      "Один", "Три", "Три", "Семь",
-      "Семь", "Один", "Два", "Пять",
-      "Шесть", "Семь", "Четыре"
-    };
-    var uniqueWord = new HashSet<>(Arrays.asList(words));
+    List<String> words = List.of("Orange", "Banana", "Orange", "Cherry", "Pineapple", "watermelon");
+    var uniqueWord = new HashSet<>(List.of("Banana", "Banana", "Cherry", "Watermelon"));
     System.out.println(uniqueWord);
     var search = new HashMap<String, Integer>();
     for (var word : words) {
